--- a/index.html
+++ b/index.html
@@ -4450,29 +4450,8 @@ ${result.errors.map(e => `${e.email}: ${e.error}`).join('\n')}`;
                                             {NOTIFICATIONS_V1_ENABLED && (
                                                 <button
                                                     onClick={() => {
-                                                        console.log('CLICK DEBUG: Button clicked');
-                                                        console.log('CLICK DEBUG: setShowNotificationSettings type:', typeof setShowNotificationSettings);
-                                                        console.log('CLICK DEBUG: setShowNotificationSettings value:', setShowNotificationSettings);
-
-                                                        if (typeof setShowNotificationSettings !== 'function') {
-                                                            console.error('ERROR: setShowNotificationSettings is not a function!');
-                                                            return;
-                                                        }
-
-                                                        console.log('TEST 1 PASSED: Notification settings button clicked');
                                                         setShowProfile(false);
                                                         setShowNotificationSettings(true);
-                                                        console.log('TEST 2 SETUP: State should be: showNotificationSettings = true');
-
-                                                        // Test 2: Verify state change
-                                                        setTimeout(() => {
-                                                            const modal = document.querySelector('[data-test-modal="notification-settings"]');
-                                                            if (modal) {
-                                                                console.log('TEST 2 PASSED: State change verified - modal element found');
-                                                            } else {
-                                                                console.log('TEST 2 FAILED: Modal element not found after state change');
-                                                            }
-                                                        }, 100);
                                                     }}
                                                     className="w-full text-left block px-2 py-1 text-[#e6edf3] hover:bg-[#30363d] rounded transition-colors text-sm"
                                                 >
@@ -7012,50 +6991,10 @@ ${result.errors.map(e => `${e.email}: ${e.error}`).join('\n')}`;
                     )}
 
                     {showNotificationSettings && NOTIFICATIONS_V1_ENABLED && (
-                        <div
-                            data-test-modal="notification-settings"
-                            style={{
-                                position: 'fixed',
-                                top: '0',
-                                left: '0',
-                                width: '100vw',
-                                height: '100vh',
-                                backgroundColor: 'rgba(0,0,0,0.8)',
-                                zIndex: 99999,
-                                display: 'flex',
-                                alignItems: 'center',
-                                justifyContent: 'center'
-                            }}
-                            onLoad={() => console.log('TEST 3 PASSED: Modal displayed and visible to user')}
-                        >
-                            <div style={{
-                                background: 'white',
-                                padding: '50px',
-                                borderRadius: '10px',
-                                color: 'black',
-                                fontSize: '20px'
-                            }}
-                            ref={(el) => {
-                                if (el) {
-                                    console.log('TEST 3 PASSED: Modal displayed and visible to user');
-                                }
-                            }}>
-                                <h2>SETTINGS MODAL TEST</h2>
-                                <p>This proves the state is working!</p>
-                                <p style={{color: 'green', fontWeight: 'bold'}}>✅ ALL TESTS COMPLETED</p>
-                                <button
-                                    onClick={() => setShowNotificationSettings(false)}
-                                    style={{
-                                        padding: '10px 20px',
-                                        marginTop: '20px',
-                                        fontSize: '16px',
-                                        cursor: 'pointer'
-                                    }}
-                                >
-                                    Close
-                                </button>
-                            </div>
-                        </div>
+                        <SettingsModal
+                            currentUser={currentUser}
+                            onClose={() => setShowNotificationSettings(false)}
+                        />
                     )}
                     {/* Debug: Check showNotificationSettings state */}
                     {console.log('Modal render check:', { showNotificationSettings, NOTIFICATIONS_V1_ENABLED, currentUser: !!currentUser })}
